2011-03-12  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: On implementing stateful Joiner.
	* src/network/JoinThread.cpp: Likewise.

	* include/dmcs/StreamingDMCS.h: Notify Joiner.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/dmcs/ConflictNotification.h: Inlucde pack_size in the
	notification.

2011-03-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputThread.h: Stateless OutputThread.
	* src/network/OutputThread.cpp: Likewise.

2011-03-11  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/dmcs/StreamingBackwardMessage.h: Combine partial belief states and session id into ModelSessionId.
	* src/network/OutputThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/AsynClient.tcc: Likewise.

	* include/network/JoinThread.h: Pass pack_size to JoinThread.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/dmcs/StreamingBackwardMessage.h: Combine belief_states and session_id into ModelSessionId.
	* src/network/OutputThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* include/network/AsynClient.tcc: Likewise.

	* include/dmcs/ModelSessionId.h: New file.
	* include/dmcs/Makefile.am: Add ModelSessionId.h.

	* include/network/Makefile.am: Remove RouterThread.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/dmcs/CommandTypeFactory.h: Continue cleaning conflicts
	related stuff.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.