@@ -1,3 +1,15 @@
+2011-03-13  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/JoinThread.h: Implementing stateful Joiner.
+	* src/solver/RelSatSolver.cpp: Likewise.
+	* src/network/ThreadFactory.cpp: Likewise.
+	* src/network/OutputThread.cpp: Likewise.
+	* src/network/JoinThread.cpp: Likewise.
+	* include/network/AsynClient.tcc: Likewise.
+	* src/dmcs/StreamingDMCS.cpp: Likewise.
+	* include/network/NeighborThread.h: Likewise.
+	* include/network/NeighborOut.h: Likewise.
+
 2011-03-12  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/network/JoinThread.h: On implementing stateful Joiner.
